--- a/personal.html
+++ b/personal.html
@@ -39,42 +39,42 @@
       <div class="row line2">
         <div class="col-md-12">
           <button>
-            <img>
+            <img src="" alt="">
           </button>
         </div>
       </div>
       <div class="row line3">
         <div class="col-md-12">
           <button>
-            <img>
+            <img src="" alt="">
           </button>
         </div>
       </div>
       <div class="row line4">
         <div class="col-md-12">
           <button>
-            <img>
+            <img src="" alt="">
           </button>
         </div>
       </div>
       <div class="row line5">
         <div class="col-md-12">
           <button>
-            <img>
+            <img src="" alt="">
           </button>
         </div>
       </div>
       <div class="row line6">
         <div class="col-md-12">
           <button>
-            <img>
+            <img src="" alt="">
           </button>
         </div>
       </div>
       <div class="row line7">
         <div class="col-md-12">
           <button>
-            <img>
+            <img src="" alt="">
           </button>
         </div>
       </div>
